--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.5.0",
     "babel-loader": "^9.1.2",
     "eslint": "^8.41.0",
+    "rc-footer": "^0.6.8",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
