--- a/serve/package.json
+++ b/serve/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "nodemon ./bin/www"
+        "start": "nodemon ./bin/www",
+        "prd": "cross-env NODE_ENV=production pm2 start ./bin/www"
     },
     "dependencies": {
         "axios": "^1.4.0",
