--- a/serve/package.json
+++ b/serve/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "start": "nodemon ./bin/www",
-        "prd": "cross-env NODE_ENV=production pm2 start ./bin/www"
+        "prd": "pm2 start ./bin/www"
     },
     "dependencies": {
         "axios": "^1.4.0",
