--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "antd": "^5.5.0",
+        "babel-eslint": "^10.1.0",
         "babel-loader": "^9.1.2",
         "jsonwebtoken": "^9.0.0",
         "mysql": "^2.18.1",
