--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "antd": "^5.5.0",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^9.1.2",
+        "cross-env": "^7.0.3",
         "jsonwebtoken": "^9.0.0",
         "mysql": "^2.18.1",
         "pm2": "^5.3.0",
@@ -33,7 +34,7 @@
         "webpack": "^5.83.1"
     },
     "scripts": {
-        "start": "set PORT=3001 && react-scripts start",
+        "start": "cross-env PORT=3001 react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
