--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "styled-components": "^6.0.0-rc.1",
         "video-react": "^0.16.0",
         "web-vitals": "^2.1.4",
-        "webpack": "^5.83.1"
+        "webpack": "^5.83.1",
+        "xss": "^1.0.14"
     },
     "scripts": {
         "start": "cross-env PORT=3001 react-scripts start",
