--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "prd": "cross-env NODE_ENV=production pm2 start ./bin/www"
+        "prd": "cross-env NODE_ENV=production PORT=3001 pm2 start ./bin/www"
     },
     "browserslist": {
         "production": [
