--- a/serve/package.json
+++ b/serve/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "start": "cross-env NODE_ENV=development nodemon ./bin/www",
-        "pm2": "cross-env NODE_ENV=production pm2 start ./bin/www"
+        "pm2": "cross-env NODE_ENV=production PORT=3001 pm2 start ./bin/www"
     },
     "dependencies": {
         "axios": "^1.4.0",
