--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-router-dom": "^6.12.1",
         "react-scripts": "5.0.1",
         "styled-components": "^6.0.0-rc.1",
+        "svgo": "^3.0.2",
         "video-react": "^0.16.0",
         "web-vitals": "^2.1.4",
         "webpack": "^5.83.1",
