--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-router-dom": "^6.12.1",
         "react-scripts": "5.0.1",
         "styled-components": "^6.0.0-rc.1",
+        "terser-webpack-plugin": "^5.3.10",
         "video-react": "^0.16.0",
         "web-vitals": "^2.1.4",
         "webpack": "^5.83.1",
@@ -53,5 +54,9 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://localhost:3002"
+    "proxy": "http://localhost:3002",
+    "devDependencies": {
+        "clean-webpack-plugin": "^4.0.0",
+        "mini-css-extract-plugin": "^2.8.1"
+    }
 }
