--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "devDependencies": {
         "clean-webpack-plugin": "^4.0.0",
         "css-loader": "^6.10.0",
+        "html-webpack-plugin": "^5.6.0",
         "mini-css-extract-plugin": "^2.8.1",
         "sass": "^1.72.0",
         "sass-loader": "^14.1.1",
