--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
         "babel-loader": "^9.1.2",
         "cross-env": "^7.0.3",
         "jsonwebtoken": "^9.0.0",
+        "lunar-javascript": "^1.6.12",
         "mysql": "^2.18.1",
         "pm2": "^5.3.0",
+        "puppeteer": "^22.6.2",
         "qcloudsms_js": "^0.1.1",
         "rc-footer": "^0.6.8",
         "react": "^18.2.0",
