--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "pm2": "^5.3.0",
         "puppeteer": "^22.6.2",
         "qcloudsms_js": "^0.1.1",
+        "query-string": "^9.0.0",
         "rc-footer": "^0.6.8",
         "react": "^18.2.0",
         "react-device-detect": "^2.2.3",
