--- a/serve/package.json
+++ b/serve/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "axios": "^1.4.0",
         "cookie-parser": "~1.4.4",
+        "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "debug": "~2.6.9",
         "express": "~4.16.1",
